--- a/Javascript_Projects/MyCalculator/mycalculator.html
+++ b/Javascript_Projects/MyCalculator/mycalculator.html
@@ -15,6 +15,9 @@
                 <div>&times;</div>
                 <div>&divide;</div>
               </div>
+              <div class="operators">
+                <div id="percentage">%</div>
+              </div> 
               <div class="leftPanel">
                 <div class="numbers">
                   <div>7</div>
